# Operating_systems

OS_HW1/: scat.c  watch.c
OS_HW2/: Makefile  flip_coins.c
OS_HW3/: Makefile  problem3_2.c
OS_HW5/: CMakeLists.txt  fortune.c
