cmake_minimum_required(VERSION 2.8.9)
project(fortune_server)
find_package(PkgConfig)
pkg_check_modules(LIBEVENT REQUIRED libevent)
include_directories(${LIBEVENT_INCLUDE_DIRS})
link_directories(${LIBEVENT_LIBRARY_DIRS})
add_executable(main fortune.c)
target_link_libraries(main ${LIBEVENT_LIBRARIES})